Fixing background layout shift, making overlays smaller

--- a/projects/static/projects/critical.css
+++ b/projects/static/projects/critical.css
@@ -111,7 +111,7 @@ img {
 }
 
 body {
-	scrollbar-gutter: stable
+	padding-left: calc(100vw - 100%)
 }
 
 html {
